\n: the line was too long :( The html code was rendered bad.

--- a/parts/appwizard/khello/Makefile.am
+++ b/parts/appwizard/khello/Makefile.am
@@ -5,7 +5,8 @@ khellodir = ${appwizarddatadir}/template-khello
 templatedir = ${appwizarddatadir}/templates
 
 # all khello data files
-khello_DATA = src-Makefile.am app.cpp app.h main.cpp appui.rc app.kdevelop subdirs app.desktop preview.png
+khello_DATA = src-Makefile.am app.cpp app.h main.cpp appui.rc app.kdevelop \
+	subdirs app.desktop preview.png
 template_DATA = khello
 
 DISTCLEANFILES = script.local
