UI polishing, part V: grepview history javasupport konsole openwith outputviews partexplorer pascalproject pascalsupport phpsupport
Changes:
Tab order in dialogs, setToolTip() and setWhatsThis() for KAction's, whatsthis and tooltips for menus and tool buttons, dialog accelerators check.

Also in this commit:
Restored compiler plugins functionality for automake and pascal projects.

--- a/parts/partexplorer/Makefile.am
+++ b/parts/partexplorer/Makefile.am
@@ -11,5 +11,7 @@ libkdevpartexplorer_la_SOURCES = partexplorerformbase.ui partexplorerform.cpp pa
 METASOURCES = AUTO
 
 servicedir = $(kde_servicesdir)
+service_DATA = kdevpartexplorer.desktop
+
 rcdir = $(kde_datadir)/kdevpartexplorer
-rc_DATA = kdevpartexplorer.desktop kdevpartexplorer.rc
+rc_DATA = kdevpartexplorer.rc
