--- a/parts/pascalproject/kdevpascalproject.rc
+++ b/parts/pascalproject/kdevpascalproject.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartplugin name="KDevPascalProject" version="1">
+<kpartplugin name="KDevPascalProject" version="2">
 <MenuBar>
   <Menu name="build" >
     <Action name="build_build" />
@@ -7,7 +7,7 @@
     <Action name="build_execute" />
   </Menu>
 </MenuBar>
-<ToolBar name="mainToolBar">
+<ToolBar name="buildToolBar">
     <Action name="build_build" group="build_operations" />
     <Action name="build_execute" group="build_operations" />
 </ToolBar>
