--- a/parts/phpsupport/kdevphpsupport.rc
+++ b/parts/phpsupport/kdevphpsupport.rc
@@ -8,7 +8,7 @@
     <Action name="project_new_class" />
   </Menu>
 </MenuBar>
-<ToolBar name="mainToolBar">
+<ToolBar name="buildToolBar">
     <Action name="build_execute" group="build_operations" />
 </ToolBar>
 </kpartgui>
