removed file templates for java

--- a/parts/filecreate/file-templates/Makefile.am
+++ b/parts/filecreate/file-templates/Makefile.am
@@ -1,2 +1,2 @@
 rcdir = $(kde_datadir)/kdevfilecreate/file-templates
-rc_DATA = py ui ui-dialog ui-mainwin ui-confdialog ui-dialogb ui-widget ui-dialogr ui-tabdialog ui-wizard java php F f f77 f90 f95 for ftn fpp pl pm rb pp-program pp-unit pas-program pas-unit dpr adb ads dox hs ts
+rc_DATA = py ui ui-dialog ui-mainwin ui-confdialog ui-dialogb ui-widget ui-dialogr ui-tabdialog ui-wizard php F f f77 f90 f95 for ftn fpp pl pm rb pp-program pp-unit pas-program pas-unit dpr adb ads dox hs ts
