--- a/parts/filecreate/file-templates/Makefile.am
+++ b/parts/filecreate/file-templates/Makefile.am
@@ -1,2 +1,2 @@
 rcdir = $(kde_datadir)/kdevfilecreate/file-templates
-rc_DATA = py ui ui-dialog ui-mainwin ui-confdialog ui-dialogb ui-widget ui-dialogr ui-tabdialog ui-wizard php F f f77 f90 f95 for ftn fpp pl pm rb adb ads dox hs ts
+rc_DATA = py ui ui-dialog ui-mainwin ui-confdialog ui-dialogb ui-widget ui-dialogr ui-tabdialog ui-wizard php pl pm rb adb ads dox hs ts
