--- a/parts/filecreate/file-templates/Makefile.am
+++ b/parts/filecreate/file-templates/Makefile.am
@@ -1,2 +1,2 @@
 rcdir = $(kde_datadir)/kdevfilecreate/file-templates
-rc_DATA = ui ui-dialog ui-mainwin ui-confdialog ui-dialogb ui-widget ui-dialogr ui-tabdialog ui-wizard adb ads dox hs ts
+rc_DATA = ui ui-dialog ui-mainwin ui-confdialog ui-dialogb ui-widget ui-dialogr ui-tabdialog ui-wizard dox hs ts
