renamed to kdevelop.pm

--- a/parts/appwizard/common/Makefile.am
+++ b/parts/appwizard/common/Makefile.am
@@ -23,7 +23,7 @@ incadmin.tar.gz:
 
 appwizarddatadir = ${kde_datadir}/kdevappwizard
 commondatadir = ${appwizarddatadir}/template-common
-commondata_DATA = gideon.pm admin.tar.gz gnu.tar.gz incadmin.tar.gz gnome.tar.gz wxwindows.tar.gz \
+commondata_DATA = kdevelop.pm admin.tar.gz gnu.tar.gz incadmin.tar.gz gnome.tar.gz wxwindows.tar.gz \
 						kde-app.lsm kde-Makefile.am kde-Makefile.cvs kde-configure.in.in \
 						kde-index.docbook kde-po-Makefile.am kde-doc-Makefile.am kde-doc-en-Makefile.am \
 						hi16-app-app.png hi32-app-app.png kde-app.desktop kde-part.desktop \
