--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -3,27 +3,9 @@
 # from KPart.
 
 #kdevelop: SCRIPTING_SUBDIR = scripting
-#kdevelop: QEDITOR_SUBDIR = qeditor
-#kdevelop: SVN_SUBDIR = svn
-#kdevelop: TODO_SUBDIRS = adasupport perlsupport
 
 if include_scripting
 SCRIPTING_SUBDIR = scripting
 endif
 
-if include_qeditor
-QEDITOR_SUBDIR = qeditor
-endif
-
-if include_svn
-SVN_SUBDIR = svn
-endif
-
-if include_cvsservice
-CVSSERVICE_SUBDIR = cvsservice
-endif
-
-TODO_SUBDIRS = adasupport perlsupport
-
-SUBDIRS = filecreate appwizard doctreeview classview outputviews grepview fileview adaproject cppsupport autoproject scriptproject trollproject customproject cvs perforce clearcase antproject diff valgrind debugger distpart konsole astyle tools ctags regexptest doxygen manager fileselector visualboyadvance tipofday abbrev filter uimode editor-chooser openwith history texttools javadebugger replace closer pascalproject pascalsupport pythonsupport rubysupport bashsupport fortransupport phpsupport javasupport partexplorer bookmarks fullscreen quickopen $(QEDITOR_SUBDIR) $(SVN_SUBDIR) $(SCRIPTING_SUBDIR) $(CVSSERVICE_SUBDIR) genericproject
-
+SUBDIRS = filecreate appwizard doctreeview classview outputviews grepview fileview diff valgrind debugger distpart konsole astyle tools ctags regexptest doxygen manager fileselector visualboyadvance tipofday abbrev filter uimode openwith history texttools javadebugger replace closer partexplorer bookmarks fullscreen quickopen $(SCRIPTING_SUBDIR)
