Rename Gideon back to KDevelop Fix compilation Disabled Ada, Perl and haskell

--- a/buildtools/Makefile.am
+++ b/buildtools/Makefile.am
@@ -1,1 +1,3 @@
-SUBDIRS = ada ant autotools custommakefiles generic haskell pascal script qmake
+## haskell is out!
+
+SUBDIRS = ada ant autotools custommakefiles generic pascal script qmake
