--- a/kdevelop.desktop
+++ b/kdevelop.desktop
@@ -2,12 +2,21 @@
 Encoding=UTF-8
 BinaryPattern=kdevelop;
 Type=Application
-Exec=gideon %u
+Exec=kdevelop %u
 MimeType=application/x-kdevelop;
-Icon=gideon
+Icon=kdevelop
 DocPath=kdevelop/index.html
 Terminal=0
 Name=KDevelop 3.0
+Name[xx]=xxKDevelop 3.0xx
 Comment=IDE for C++/Qt/KDE
+Comment[es]=IDE para C++/Qt/KDE
+Comment[hu]=C++/Qt/KDE fejlesztőkörnyezet
+Comment[it]=IDE per C++/Qt/KDE
+Comment[pt_BR]=IDE para C++/Qt/KDE
+Comment[sr]=IDE за C++/Qt/KDE
+Comment[sv]=Integrerad utvecklingsmiljö för C++/Qt/KDE
+Comment[tr]=C++/Qt/KDE için IDE
+Comment[xx]=xxIDE for C++/Qt/KDExx
 X-DCOP-ServiceType=Multi
 Categories=Qt;KDE;Development
