Finaly we can access KDevelop API Documentation with the documentation browser!

--- a/doc/extras/Makefile.am
+++ b/doc/extras/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS=w3c
 
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA = gnustep.toc gnome1.toc perl.toc php.toc python.toc sw.toc bash.toc qt-kdev3.toc sdl.toc opengl.toc
+toc_DATA = gnustep.toc gnome1.toc perl.toc php.toc python.toc sw.toc bash.toc qt-kdev3.toc sdl.toc opengl.toc kdev3api.toc
 
 indexdir = ${kde_datadir}/devdoctreeview/indices
 index_DATA = php.index python.index
