Moved Haskell file template to it's place

--- a/languages/haskell/Makefile.am
+++ b/languages/haskell/Makefile.am
@@ -1,7 +1,7 @@
 KDE_CXXFLAGS = $(USE_EXCEPTIONS)
 
 INCLUDES = -I$(top_srcdir)/lib/antlr -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
-SUBDIRS = app_templates compiler
+SUBDIRS = app_templates file_templates compiler
 
 kde_module_LTLIBRARIES = libkdevhaskellsupport.la
 libkdevhaskellsupport_la_LDFLAGS = $(LEXLIB) $(all_libraries) $(KDE_PLUGIN)
