--- a/languages/Makefile.am
+++ b/languages/Makefile.am
@@ -1,3 +1,3 @@
 ## ada perl are out!
 
-SUBDIRS = cpp fortran haskell java pascal php python ruby sql xul
+SUBDIRS = ada cpp fortran haskell java pascal php python ruby sql xul
