made adahello template use custom project, also made sure that it can be compiled and run "right from the box"

--- a/languages/ada/app_templates/adahello/Makefile.am
+++ b/languages/ada/app_templates/adahello/Makefile.am
@@ -3,7 +3,7 @@ commondatadir = ${appwizarddatadir}/template-common
 adahellodir = ${appwizarddatadir}/template-adahello
 templatedir = ${appwizarddatadir}/templates
 
-adahello_DATA = main.adb app.kdevelop
+adahello_DATA = main.adb app.kdevelop ada-Makefile app.kdevelop.filelist
 template_DATA = adahello
 
 DISTCLEANFILES = script.local
