Concentrate _all_ version information in the configure.in file. This way is easy to prepare new releases.

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,7 +15,7 @@ install-data-local:
 	@echo ""
 	@echo "******************* Important *********************"
 	@echo ""
-	@echo "KDevelop 3.0 alpha7 has been installed."
+	@echo "KDevelop $(VERSION) has been installed."
 	@echo ""
 	@echo "***************************************************"
 
