Fix compilation on KDE 3.0.5, QT 3.0.5
Thanks to Iztok Kobal for the patch.

CCAMAIL: iztok.kobal@iskrasistemi.si

--- a/lib/util/Makefile.am
+++ b/lib/util/Makefile.am
@@ -1,4 +1,4 @@
-INCLUDES = -I$(top_srcdir)/lib/interfaces 	   -I$(top_srcdir)/lib/sourceinfo 	   $(all_includes)
+INCLUDES = -I$(top_srcdir)/lib/compat  -I$(top_srcdir)/lib/interfaces  -I$(top_srcdir)/lib/sourceinfo  $(all_includes)
 
 noinst_LTLIBRARIES = libkdevutil.la
 
