* The Debian packages are now "kdevelop*" rather than "gideon*". * Updated the kdevelop-doc package to include the kdevelop HTML documentation * Removed the x-pascal.desktop file from kdevelop-data * Added the libraries without a package to the kdevelop package * Updated the build-depends and suggests fields   - Removed obsolete packages * Added some extra arguments for when configure is run   - Enabled all of the language support options * Added python2.2-dev / python2.3-dev to the build depends
Thanks to Norman Jordan for the patch.

CCMAIL: njordan@debian.org

--- a/debian/rules
+++ b/debian/rules
@@ -55,6 +55,23 @@ configure-stamp:
 				--sysconfdir=$(kde_confdir) \
 				--with-kdelibsdoxy-dir=/usr/share/doc/kde/HTML/en/kdelibs-apidocs \
 				--with-pythondir=/usr \
+				--enable-scripting \
+				--enable-ada \
+				--enable-python \
+				--enable-cpp \
+				--enable-perl \
+				--enable-php \
+				--enable-fortran \
+				--enable-sql \
+				--enable-bash \
+				--enable-ruby \
+				--enable-pascal \
+				--enable-autoproject \
+				--enable-scriptproject \
+				--enable-trollproject \
+				--enable-customproject \
+				--enable-cvs \
+				--enable-vba \
 				$(configkdevelop) \
 				--disable-final \
 				$(JAVA_FLAGS)
@@ -112,8 +129,9 @@ install: build
 
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
 
-	-install -d $(CURDIR)/debian/tmp/usr/share/gideon
-	-install debian/update_doc_index.sh $(CURDIR)/debian/tmp/usr/share/gideon
+	-install -d $(CURDIR)/debian/tmp/usr/share/kdevelop
+	-install debian/update_doc_index.sh $(CURDIR)/debian/tmp/usr/share/kdevelop
+	-rm -f debian/tmp/usr/share/mimelnk/text/x-pascal.desktop
 
 	dh_install --list-missing
 
