--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,16 @@
-Source: gideon
+Source: kdevelop
 Section: kde
 Priority: optional
 Maintainer: Norman Jordan <njordan@debian.org>
-Build-Depends: debhelper (>> 4.0.0), kdelibs4-dev, gettext, autoconf, automake1.6 | automake1.7, kdelibs4-doc | kdelibs-doc, qt-doc | qt3-doc, flex, libdb4.1-dev | libdb4.0-dev | libdb3-dev
+Build-Depends: debhelper (>> 4.0.0), kdelibs4-dev, gettext, autoconf, automake1.6 | automake1.7, kdelibs4-doc, qt3-doc, flex, libdb4.1-dev | libdb4.0-dev | libdb3-dev, python2.3-dev | python2.2-dev
 Standards-Version: 3.5.6.0
 
-Package: gideon
+Package: kdevelop
 Architecture: any
-Depends: ${shlibs:Depends}, autoconf, automake | automake1.6 | automake1.7, kdebase-bin, gideon-data, gideon-plugins
-Recommends: make, gideon-doc
-Suggests: libqt3-mt-dev, qt3-doc, kdbg, kdelibs-dev, kdebase, kdelibs4-doc, htdig, sgmltools, gettext, a2ps, enscript, gv, qt3-tools, glimpse, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz, stl-manual, wxwin2.4-headers, wxwin2.4-i18n, wxwin2.4-examples, libwxbase2.4 | libwxgtk2.4 | libwxgtk2.4-contrib
+Depends: ${shlibs:Depends}, autoconf, automake | automake1.6 | automake1.7, kdebase-bin, kdevelop-data (>> 3.0), kdevelop-plugins
+Recommends: make, kdevelop-doc
+Suggests: libqt3-mt-dev, qt3-doc, kdbg, kdelibs4-dev, kdelibs4-doc, htdig, sgmltools-lite, gettext, a2ps, enscript, gv, qt3-dev-tools, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz, stl-manual, wxwin2.4-headers, wxwin2.4-i18n, wxwin2.4-examples, libwxbase2.4 | libwxgtk2.4 | libwxgtk2.4-contrib
+Conflicts: gideon
 Description: An IDE for Unix/X11 - development version
  KDevelop is an easy to use Integrated Development Environment
  for developing C/C++ applications under X11. It features 
@@ -21,10 +22,11 @@ Description: An IDE for Unix/X11 - development version
  .
  URL: http://www.kdevelop.org/
 
-Package: gideon-doc
+Package: kdevelop-doc
 Section: doc
 Architecture: all
-Suggests: qt-doc, python2.2-doc, glib-reference, gtk-reference, gnome-dev-doc, stl-manual
+Suggests: qt-doc, python2.3-doc | python2.2-doc, libglib2.0-doc, libgtk2.0-doc | libgtk1.2-doc, gnome-dev-doc, stl-manual
+Conflicts: gideon-doc
 Description: An IDE for Unix/X11 - documentation
  KDevelop is an easy to use Integrated Development Environment
  for developing C/C++ applications under X11. It features 
@@ -38,9 +40,10 @@ Description: An IDE for Unix/X11 - documentation
  .
  URL: http://www.kdevelop.org/
 
-Package: gideon-data
+Package: kdevelop-data
 Architecture: all
-Depends: gideon (= ${Source-Version})
+Depends: kdevelop (= ${Source-Version})
+Conflicts: gideon-data
 Description: An IDE for Unix/X11 - data
  KDevelop is an easy to use Integrated Development Environment
  for developing C/C++ applications under X11. It features 
@@ -54,11 +57,12 @@ Description: An IDE for Unix/X11 - data
  .
  URL: http://www.kdevelop.org/
 
-Package: gideon-dev
+Package: kdevelop-dev
 Architecture: all
-Depends: gideon (= ${Source-Version})
+Depends: kdevelop (= ${Source-Version})
 Recommends: make
 Suggests: libqt3-mt-dev, qt3-doc, kdbg, kdelibs4-dev, kdebase, kdelibs4-doc, htdig, sgmltools, gettext, a2ps, enscript, gv, qt3-tools, glimpse, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz
+Conflicts: gideon-dev
 Description: An IDE for Unix/X11 - development files
  KDevelop is an easy to use Integrated Development Environment
  for developing C/C++ applications under X11. It features 
@@ -72,9 +76,10 @@ Description: An IDE for Unix/X11 - development files
  .
  URL: http://www.kdevelop.org/
 
-Package: gideon-plugins
+Package: kdevelop-plugins
 Architecture: any
 Depends: ${shlibs:Depends}
+Conflicts: gideon-plugins
 Description: An IDE for Unix/X11 - development files
  KDevelop is an easy to use Integrated Development Environment
  for developing C/C++ applications under X11. It features 
