--- a/lib/qextmdi/Makefile.am
+++ b/lib/qextmdi/Makefile.am
@@ -1,6 +1,19 @@
-####### kdevelop will overwrite this part!!! (begin)##########
+# Here resides the qextmdi library.
 
-SUBDIRS = src include
+INCLUDES = -I. -I$(top_srcdir)/lib/qextmdi/res -I$(top_srcdir)/lib/structure $(all_includes)
 
-####### kdevelop will overwrite this part!!! (end)############
-EXTRADIST = res
+lib_LTLIBRARIES = libkdevelopqextmdi.la
+libkdevelopqextmdi_la_LDFLAGS = $(all_libraries) -version-info 3:0
+libkdevelopqextmdi_la_LIBADD = $(LIB_KPARTS)
+
+libkdevelopqextmdi_la_SOURCES = kmdichildarea.cpp kmdichildfrm.cpp kmdichildfrmcaption.cpp \
+				kmdichildview.cpp kmdimainfrm.cpp kmditaskbar.cpp kmdidockcontainer.cpp \
+				kdockwidget_compat.cpp dockmainwindow_compat.cpp kmultitabbar.cpp \
+				kmditoolviewaccessor.cpp kmdidocumentviewtabwidget.cpp kmdifocuslist.cpp
+
+KDE_OPTIONS = nofinal
+METASOURCES = AUTO
+
+AM_CXXFLAGS = -DNO_INCLUDE_MOCFILES
+
+META_INCLUDES = $(srcdir)
