hmm.... moc works different on Win32 and Unix... fixed that here

--- a/lib/qextmdi/Makefile.am
+++ b/lib/qextmdi/Makefile.am
@@ -14,6 +14,6 @@ libkdevelopqextmdi_la_SOURCES = kmdichildarea.cpp kmdichildfrm.cpp kmdichildfrmc
 KDE_OPTIONS = nofinal
 METASOURCES = AUTO
 
-AM_CXXFLAGS = -DNO_INCLUDE_MOCFILES
+#AM_CXXFLAGS = -DNO_INCLUDE_MOCFILES
 
 META_INCLUDES = $(srcdir)
