here comes the new subversion part (needs kdenonbeta/kio_svn)

--- a/vcs/Makefile.am
+++ b/vcs/Makefile.am
@@ -10,5 +10,5 @@ if include_svn
 SVN_SUBDIR = svn
 endif
 
-SUBDIRS = clearcase cvs $(CVSSERVICE_SUBDIR) perforce $(SVN_SUBDIR)
+SUBDIRS = clearcase cvs $(CVSSERVICE_SUBDIR) perforce $(SVN_SUBDIR) subversion
 
