--- a/buildtools/ant/kdevantproject.rc
+++ b/buildtools/ant/kdevantproject.rc
@@ -1,13 +1,13 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="KDevAntProject" version="1">
+<kpartgui name="KDevAntProject" version="2">
 <MenuBar>
   <Menu name="build" >
     <Action name="build_build" />
-    <Action name="build_compilefile" />
+<!--    <Action name="build_compilefile" /> -->
     <Action name="build_target" />
-    <Action name="build_clean" />
+<!--    <Action name="build_clean" />
     <Separator/>
-    <Action name="build_execute" />
+    <Action name="build_execute" /> -->
   </Menu>
 </MenuBar>
 </kpartgui>
