removal of the obsolete svn/ stuff

--- a/vcs/Makefile.am
+++ b/vcs/Makefile.am
@@ -1,14 +1,9 @@
 
 #kdevelop: CVSSERVICE_SUBDIR = cvsservice
-#kdevelop: SVN_SUBDIR = svn
 
 if include_cvsservice
 CVSSERVICE_SUBDIR = cvsservice
 endif
 
-if include_svn
-SVN_SUBDIR = svn
-endif
-
-SUBDIRS = clearcase cvs $(CVSSERVICE_SUBDIR) perforce $(SVN_SUBDIR) subversion
+SUBDIRS = clearcase cvs $(CVSSERVICE_SUBDIR) perforce subversion
 
