--- a/languages/fortran/Makefile.am
+++ b/languages/fortran/Makefile.am
@@ -1,7 +1,7 @@
 # Here resides the Fortran support part.
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_includes)
-SUBDIRS = file_templates app_templates compiler
+SUBDIRS = file_templates app_templates compiler doc
 
 kde_module_LTLIBRARIES = libkdevfortransupport.la
 libkdevfortransupport_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
