--- a/languages/fortran/doc/Makefile.am
+++ b/languages/fortran/doc/Makefile.am
@@ -1,7 +1,6 @@
 tocdir = ${kde_datadir}/kdevdoctreeview/tocs
-toc_DATA = kdev3api.toc
+toc_DATA =
 
 indexdir = ${kde_datadir}/devdoctreeview/indices
 index_DATA = 
-
 
