--- a/languages/perl/Makefile.am
+++ b/languages/perl/Makefile.am
@@ -1,7 +1,7 @@
 # Here resides the Perl support part.
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces 	   -I$(top_srcdir)/lib/sourceinfo 	   -I$(top_srcdir)/lib/util 	   $(all_includes)
-SUBDIRS = app_templates file_templates
+SUBDIRS = app_templates file_templates doc
 
 
 kde_module_LTLIBRARIES = libkdevperlsupport.la kio_perldoc.la
