--- a/languages/python/Makefile.am
+++ b/languages/python/Makefile.am
@@ -2,7 +2,7 @@
 # Do not confuse this with the python part responsible for KDevelop scripting
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces            -I$(top_srcdir)/lib/sourceinfo            -I$(top_srcdir)/lib/util            $(all_includes)
-SUBDIRS = app_templates file_templates
+SUBDIRS = app_templates file_templates doc
 
 
 kde_module_LTLIBRARIES = libkdevpythonsupport.la kio_pydoc.la
